--- a/shop-list.html
+++ b/shop-list.html
@@ -26,26 +26,26 @@
     }
     h1 {
       text-align: center;
-      padding: 28.8px 0 24px 0;  /* 1.2x bigger padding */
-      margin: 38.4px auto 0 auto;  /* 1.2x bigger margin */
-      max-width: 1080px;  /* 1.2x bigger */
+      padding: 24px 0 20px 0;  /* Reduced for better balance */
+      margin: 32px auto 0 auto;
+      max-width: 900px;
       background: rgba(255,255,255,0.70);
-      border-radius: 21.6px;  /* 1.2x bigger radius */
-      box-shadow: 0 9.6px 38.4px rgba(31,38,135,0.12);  /* 1.2x bigger shadow */
-      font-size: 2.88rem;  /* 1.2x bigger */
+      border-radius: 18px;
+      box-shadow: 0 8px 32px rgba(31,38,135,0.12);
+      font-size: 2.4rem;
       font-weight: 700;
       color: #005f73;
-      letter-spacing: 0.6px;  /* 1.2x bigger */
+      letter-spacing: 0.5px;
       display: flex;
       align-items: center;
       justify-content: center;
-      gap: 12px;  /* 1.2x bigger gap */
+      gap: 10px;
     }
     h1::before {
       content: "🍴";
-      font-size: 2.4rem;  /* 1.2x bigger */
+      font-size: 2rem;
       color: #b7b7d7;
-      margin-right: 9.6px;  /* 1.2x bigger */
+      margin-right: 8px;
     }
     body {
       min-height: 100vh;
@@ -56,97 +56,97 @@
     }
     .container {
       background: rgba(255,255,255,0.70);
-      border-radius: 21.6px;  /* 1.2x bigger */
-      box-shadow: 0 9.6px 38.4px 0 rgba(31, 38, 135, 0.18);  /* 1.2x bigger */
-      padding: 48px 28.8px 38.4px 28.8px;  /* 1.2x bigger padding */
-      max-width: 1080px;  /* 1.2x bigger */
+      border-radius: 18px;
+      box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.18);
+      padding: 40px 24px 32px 24px;  /* Reduced padding */
+      max-width: 900px;
       width: 100%;
-      margin: 28.8px auto 0 auto;  /* 1.2x bigger margin */
+      margin: 24px auto 0 auto;
       position: relative;
       z-index: 1;
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
-      gap: 33.6px;  /* 1.2x bigger gap */
+      gap: 28px;  /* Reduced gap */
     }
     .shop-card {
-      width: 408px;  /* 1.2x bigger */
+      width: 340px;
       background: linear-gradient(120deg, #e3eafcbb 80%, #f1f8e9bb 100%);
-      border-radius: 21.6px;  /* 1.2x bigger radius */
-      box-shadow: 0 4.8px 19.2px rgba(31, 38, 135, 0.10);  /* 1.2x bigger */
+      border-radius: 18px;
+      box-shadow: 0 4px 16px rgba(31, 38, 135, 0.10);
       overflow: hidden;
       text-align: center;
       transition: transform 0.18s, box-shadow 0.18s;
       cursor: pointer;
       position: relative;
-      border: 2.4px solid #005f7322;  /* 1.2x bigger border */
+      border: 2px solid #005f7322;
       display: flex;
       flex-direction: column;
       align-items: center;
     }
     .shop-card:hover {
       transform: scale(1.03);
-      box-shadow: 0 9.6px 28.8px rgba(31, 38, 135, 0.18);  /* 1.2x bigger */
+      box-shadow: 0 8px 24px rgba(31, 38, 135, 0.18);
       border-color: #005f7355;
     }
     .shop-card img {
       width: 100%;
-      height: 240px;  /* 1.2x bigger */
+      height: 200px;
       object-fit: cover;
       object-position: top;
-      border-top-left-radius: 21.6px;  /* 1.2x bigger */
-      border-top-right-radius: 21.6px;  /* 1.2x bigger */
+      border-top-left-radius: 18px;
+      border-top-right-radius: 18px;
       background: #e3eafcbb;
     }
     .shop-card h3 {
-      margin: 19.2px 0 12px 0;  /* 1.2x bigger margin */
+      margin: 16px 0 10px 0;
       color: #005f73;
-      font-size: 1.62rem;  /* 1.2x bigger */
+      font-size: 1.35rem;
       font-weight: 700;
-      letter-spacing: 0.24px;  /* 1.2x bigger */
+      letter-spacing: 0.2px;
     }
     .shop-card p {
       color: #444;
-      padding: 0 19.2px 24px;  /* 1.2x bigger padding */
-      font-size: 1.32rem;  /* 1.2x bigger */
-      min-height: 57.6px;  /* 1.2x bigger */
+      padding: 0 16px 20px;
+      font-size: 1.1rem;
+      min-height: 48px;
     }
     @media (max-width: 700px) {
       h1 {
-        font-size: 2.04rem;  /* 1.2x bigger */
-        padding: 16.8px 0 14.4px 0;  /* 1.2x bigger */
-        margin-top: 14.4px;  /* 1.2x bigger */
+        font-size: 1.7rem;
+        padding: 14px 0 12px 0;
+        margin-top: 12px;
       }
       .container {
-        padding: 24px 7.2px;  /* 1.2x bigger */
+        padding: 20px 6px;
         max-width: 98vw;
-        gap: 24px;  /* 1.2x bigger */
+        gap: 20px;
       }
       .shop-card {
         width: 98vw;
-        max-width: 504px;  /* 1.2x bigger */
+        max-width: 420px;
       }
       .shop-card img {
-        height: 312px;  /* 1.2x bigger */
+        height: 260px;
         object-position: 0% 5%;
         background: #f1f1f1;
         transition: opacity 0.3s ease;
       }
       .shop-card h3 {
-        font-size: 1.68rem;  /* 1.2x bigger */
+        font-size: 1.4rem;
       }
       .shop-card p {
-        font-size: 1.44rem;  /* 1.2x bigger */
+        font-size: 1.2rem;
       }
     }
     @media (max-width: 500px) {
       h1 {
-        font-size: 1.92rem;  /* 1.2x bigger */
-        padding: 14.4px 0 12px 0;  /* 1.2x bigger */
-        margin-top: 9.6px;  /* 1.2x bigger */
+        font-size: 1.6rem;
+        padding: 12px 0 10px 0;
+        margin-top: 8px;
       }
       .container {
-        padding: 19.2px 0;  /* 1.2x bigger */
+        padding: 16px 0;
         gap: 0px;
         flex-direction: row;
         flex-wrap: wrap;
@@ -156,18 +156,18 @@
         max-width: 50vw;
       }
       .shop-card img {
-        height: calc(50vw * 0.96);  /* 1.2x bigger multiplier */
+        height: calc(50vw * 0.6);  /* Reduced multiplier for shorter cards, less glitching */
         object-position: bottom;
         background: #e3eafcbb;
       }
       .shop-card h3 {
-        font-size: 1.68rem;  /* 1.2x bigger */
-        margin: 21.6px 0 14.4px 0;  /* 1.2x bigger */
+        font-size: 1.4rem;
+        margin: 18px 0 12px 0;
       }
       .shop-card p {
-        font-size: 1.44rem;  /* 1.2x bigger */
-        padding: 0 12px 24px;  /* 1.2x bigger */
-        min-height: 62.4px;  /* 1.2x bigger */
+        font-size: 1.2rem;
+        padding: 0 10px 20px;
+        min-height: 52px;
       }
     }
   </style>
