--- a/shop-list.html
+++ b/shop-list.html
@@ -108,7 +108,7 @@
     .shop-card p {
       color: #444;
       padding: 0 16px 20px;
-      font-size: 1.5rem;
+      font-size: 1.rem;
       min-height: 48px;
     }
     @media (max-width: 700px) {
@@ -150,6 +150,7 @@
         gap: 0px;  /* Least gap possible */
         flex-direction: row;
         flex-wrap: wrap;
+        min-height: auto;  /* Allows container to expand vertically for more shops */
       }
       .shop-card {
         width: 50vw;  /* Fills half the container/screen */
@@ -174,7 +175,7 @@
 </head>
 <body>
   <div class="background"></div>
-  <h1>UNM Cafeteria – Choose a Shop</h1>
+  <h1>UNM Cafeteria</h1>
   <div class="container" id="shopList">
     <!-- Shops will load here -->
   </div>
@@ -221,4 +222,3 @@
   </script>
 </body>
 </html>
-
