--- a/shop-list.html
+++ b/shop-list.html
@@ -25,9 +25,10 @@
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
-      filter: blur(6px) brightness(0.7);
+      filter: blur(3px) brightness(0.7);  /* Reduced blur from 6px to 3px */
       z-index: -1;
       transform: translateZ(0);
+      will-change: transform;  /* Added to reduce glitching on scroll */
     }
 
     h1 {
@@ -94,6 +95,7 @@
       flex-direction: column;
       align-items: center;
       will-change: transform;
+      margin-left: -1mm;  /* Moved shops to the left by 1mm */
     }
 
     .shop-card:hover {
@@ -144,6 +146,7 @@
         width: 45vw;          /* Two columns */
         max-width: 45vw;
         border-radius: 14px;
+        margin-left: -1mm;  /* Applied to mobile too */
       }
       .shop-card img {
         height: calc(45vw * 0.6);
@@ -167,6 +170,7 @@
         width: 47vw;
         max-width: 47vw;
         margin: 0;
+        margin-left: -1mm;  /* Applied to mobile too */
       }
       .shop-card img {
         height: calc(47vw * 0.6);
