--- a/shop-list.html
+++ b/shop-list.html
@@ -18,7 +18,7 @@
     }
 
     .background {
-      position: absolute;  /* Changed from fixed to absolute to prevent white glitch on scroll */
+      position: absolute;
       top: 0; left: 0;
       width: 100vw; height: 100vh;
       background-image: url('https://firebasestorage.googleapis.com/v0/b/unm-caf-orders.firebasestorage.app/o/DSC_8475.jpg?alt=media&token=e46d3522-b27e-422f-99b4-9b3863c21ff0');
@@ -62,7 +62,7 @@
       flex-direction: column;
       align-items: center;
       justify-content: flex-start;
-      background: rgba(255,255,255,0.7);  /* Added background color to body to fill scroll area */
+      background: rgba(255,255,255,0.7);
     }
 
     .container {
@@ -96,7 +96,7 @@
       flex-direction: column;
       align-items: center;
       will-change: transform;
-      margin-left: -1mm;
+      touch-action: manipulation;  /* Improves touch response on mobile */
     }
 
     .shop-card:hover {
@@ -141,13 +141,12 @@
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
-        gap: 12px;
+        gap: 8px;  /* Reduced gap for tighter mobile layout */
       }
       .shop-card {
         width: 45vw;
         max-width: 45vw;
         border-radius: 14px;
-        margin-left: -1mm;
       }
       .shop-card img {
         height: calc(45vw * 0.6);
@@ -167,14 +166,34 @@
     }
 
     @media (max-width: 500px) {
+      h1 {
+        font-size: 1.8rem;  /* Slightly larger for mobile readability */
+        padding: 12px 0 10px 0;
+        margin-top: 8px;
+      }
+      .container {
+        padding: 8px 2px;  /* Reduced padding to fit better */
+        gap: 2px;  /* Further reduced gap to prevent overflow */
+      }
       .shop-card {
-        width: 47vw;
+        width: 47vw;  /* Reduced from 48vw to fit better (94vw total for two cards) */
         max-width: 47vw;
-        margin: 0;
-        margin-left: -1mm;
+        border-radius: 12px;
       }
       .shop-card img {
-        height: calc(47vw * 0.6);
+        height: calc(47vw * 0.6);  /* Proportional height */
+      }
+      .shop-card h3 {
+        font-size: 1.2rem;  /* Larger for touch */
+        margin: 12px 0 8px 0;
+      }
+      .shop-card p {
+        font-size: 1rem;  /* Larger for readability */
+        padding: 0 10px 12px;
+        min-height: 40px;
+      }
+      .background {
+        background-image: url('https://via.placeholder.com/800x600?text=Mobile+Background');  /* Placeholder for phone-friendly image; replace with optimized mobile image */
       }
     }
   </style>
