--- a/shop-list.html
+++ b/shop-list.html
@@ -93,7 +93,7 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      margin-left: 0;  /* Removed negative margin */
+      margin-left: -2px;  /* Slight left shift to center and prevent right cut-off */
       color: white;  /* Text color for visibility */
       /* Removed transform and will-change to prevent flickering */
     }
@@ -150,6 +150,7 @@
         min-width: 200px;
         max-width: none;  /* Allow full width on mobile */
         border-radius: 14px;
+        margin-left: -2px;  /* Slight left shift for mobile centering */
       }
       .shop-card img {
         height: 150px;  /* Fixed height to prevent layout shifts */
@@ -173,6 +174,7 @@
       .shop-card {
         width: calc(100% - 8px);  /* Full width on very small screens */
         margin: 0;
+        margin-left: 0;  /* No shift needed for full width */
       }
       .shop-card img {
         height: 120px;  /* Smaller fixed height */
@@ -196,7 +198,7 @@
       projectId: "unm-caf-orders",
       storageBucket: "unm-caf-orders.appspot.com",
       messagingSenderId: "562096834985",
-      appId: "1:562096834985:web:f4fbe451e5482521e49cb8",
+      appId: "1:562096834985:web:f4bfe451e5482521e49cb8",
       measurementId: "G-J12PBDK7N1"
     };
 
