--- a/menu.html
+++ b/menu.html
@@ -14,46 +14,46 @@
       min-height: 100vh;
       box-sizing: border-box;
       background: transparent;
+      overflow-x: hidden;
+      -webkit-overflow-scrolling: touch;
     }
     .background {
       position: fixed;
       top: 0; left: 0;
       width: 100vw; height: 100vh;
-      background-image: url('https://www.nottingham.edu.my/events/images-multimedia/25th-anniversary/banner-homepage-25th-anniversary.jpg');
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
-      filter: blur(6px) brightness(0.7);
+      background: linear-gradient(135deg, #001122, #002233, #003344, #004455, #005566, #006677, #007788, #008899, #0099AA);  /* Mixed gradient with similar blue-turquoise shades */
       z-index: -1;
+      transform: translateZ(0);
+      will-change: transform;
     }
     .lux-box {
-      background: rgba(255,255,255,0.72);
-      box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.16), 0 1.5px 0 0 #e5e5e5 inset;
-      border-radius: 18px;
+      /* Removed white background */
+      box-shadow: 0 12px 40px rgba(0,0,0,0.3);  /* Adjusted shadow for visibility */
+      border-radius: 20px;
       max-width: 900px;
       margin: 32px auto 0 auto;
       padding: 18px 0 14px 0;
       text-align: center;
       font-size: 2rem;
       font-weight: 700;
-      color: #005f73;
+      color: white;  /* Changed to white for contrast */
       letter-spacing: 0.5px;
       position: relative;
-      backdrop-filter: blur(2px);
+      text-shadow: 0 2px 4px rgba(0,0,0,0.5);  /* Added text shadow for readability */
     }
     .lux-box .menu-title {
       font-size: 2rem;
       font-weight: 700;
-      color: #005f73;
+      color: white;  /* Changed to white */
       margin: 0;
       letter-spacing: 0.5px;
       font-family: 'Roboto', Arial, sans-serif;
-      text-shadow: 0 2px 8px rgba(0,0,0,0.04);
+      text-shadow: 0 2px 4px rgba(0,0,0,0.5);
     }
     .container {
-      background: rgba(255,255,255,0.72);
-      border-radius: 18px;
-      box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.16), 0 1.5px 0 0 #e5e5e5 inset;
+      /* Removed white background */
+      border-radius: 20px;
+      box-shadow: 0 16px 48px rgba(0,0,0,0.3);  /* Adjusted shadow */
       padding: 32px 18px 24px 18px;
       max-width: 900px;
       width: 100%;
@@ -61,81 +61,111 @@
       position: relative;
       z-index: 1;
       display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 22px;
-      backdrop-filter: blur(2px);
+      flex-direction: column;
+      gap: 12px;  /* Reduced gap for compact layout */
     }
     .menu-card {
-      width: 260px;
-      background: linear-gradient(120deg, #f8fafc 80%, #e3eafc 100%);
-      border-radius: 14px;
-      box-shadow: 0 4px 16px rgba(31, 38, 135, 0.10);
+      width: 100%;
+      background: rgba(0, 128, 128, 0.6);  /* Changed to semi-transparent greenish blue (teal) */
+      border-radius: 16px;
+      box-shadow: 0 8px 32px rgba(0,0,0,0.3);
       overflow: hidden;
-      text-align: center;
+      text-align: left;
       transition: transform 0.18s, box-shadow 0.18s;
       cursor: pointer;
       position: relative;
-      border: 2px solid #005f7322;
+      border: 2px solid rgba(255,255,255,0.2);  /* Adjusted border */
       display: flex;
-      flex-direction: column;
+      flex-direction: row;
       align-items: center;
-      padding-bottom: 18px;
+      padding: 12px;
+      min-height: 100px;  /* Increased for bigger image */
+      touch-action: manipulation;  /* Better touch on mobile */
+      color: white;  /* Text color for visibility */
+      margin-left: -1mm;  /* Added to align like shop-list */
     }
     .menu-card:hover {
-      transform: scale(1.03);
-      box-shadow: 0 8px 24px rgba(31, 38, 135, 0.18);
-      border-color: #005f7355;
+      transform: scale(1.01);
+      box-shadow: 0 12px 40px rgba(0,0,0,0.4);
+      border-color: rgba(255,255,255,0.4);
     }
     .menu-card img {
-      width: 100%;
-      height: 140px;
+      width: 80px;  /* Bigger image */
+      height: 80px;
       object-fit: cover;
-      border-top-left-radius: 14px;
-      border-top-right-radius: 14px;
+      border-radius: 8px;
       background: #e3eafc;
-      margin-bottom: 10px;
+      margin-right: 12px;
       box-shadow: 0 2px 8px rgba(31,38,135,0.08);
+      flex-shrink: 0;
+    }
+    .menu-card .details {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
     }
     .menu-card h3 {
-      margin: 12px 0 6px 0;
-      color: #005f73;
-      font-size: 1.18rem;
+      margin: 0 0 4px 0;
+      color: white;  /* Changed to white */
+      font-size: 1.1rem;  /* Slightly larger for readability */
       font-weight: 700;
       letter-spacing: 0.2px;
+      text-shadow: 0 1px 2px rgba(0,0,0,0.5);
     }
     .menu-card p {
-      color: #444;
-      padding: 0 12px 14px;
-      font-size: 0.98rem;
-      min-height: 38px;
+      margin: 0;
+      color: #ddd;  /* Light gray for price */
+      font-size: 1rem;  /* Larger price */
+    }
+    .portion-options {
+      display: flex;
+      justify-content: center;
+      gap: 8px;
+      margin: 4px 0;
+      font-size: 0.8rem;
+      color: white;  /* Changed to white */
+      font-weight: 600;
+    }
+    .portion-options label {
+      display: flex;
+      align-items: center;
+      cursor: pointer;
+    }
+    .portion-options input[type="radio"] {
+      margin-right: 3px;
     }
     .menu-card button {
-      margin-top: 8px;
-      padding: 10px 24px;
-      border-radius: 8px;
-      border: none;
-      background: linear-gradient(90deg, #005f73 60%, #00aaff 100%);
+      background: #005f73;
       color: #fff;
+      border: none;
+      border-radius: 50%;
+      width: 50px;  /* Bigger button for touch */
+      height: 50px;
+      font-size: 1.8rem;
       font-weight: bold;
-      font-size: 1em;
       cursor: pointer;
       box-shadow: 0 2px 8px rgba(0,0,0,0.10);
       transition: background 0.2s, transform 0.2s;
-      letter-spacing: 0.5px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-shrink: 0;
+      margin-left: 12px;
+      touch-action: manipulation;
     }
     .menu-card button:active {
-      background: linear-gradient(90deg, #0099cc 60%, #005f73 100%);
-      transform: scale(0.98);
+      background: #00aaff;
+      transform: scale(0.95);
     }
     #cart-section {
-      background: rgba(255,255,255,0.80);
-      padding: 1rem;
+      background: rgba(255,255,255,0.90);
+      padding: 0.5rem;
       position: fixed;
       bottom: 0;
       left: 0;
       width: 100vw;
-      box-shadow: 0 -2px 24px rgba(31,38,135,0.10);
+      box-shadow: 0 -4px 24px rgba(31,38,135,0.12), 0 2px 8px rgba(0, 0, 0, 0.04), inset 0 1px 0 rgba(255, 255, 255, 0.6);
       border-top-left-radius: 18px;
       border-top-right-radius: 18px;
       z-index: 10;
@@ -145,23 +175,27 @@
       flex-direction: column;
       align-items: center;
       backdrop-filter: blur(2px);
+      max-height: 200px;
+      overflow-y: auto;
     }
     #cart-items {
       width: 100%;
       max-width: 600px;
-      margin: 0 auto 8px auto;
+      margin: 0 auto 4px auto;
+      max-height: 100px;
+      overflow-y: auto;
     }
     .cart-item {
       display: flex;
       align-items: center;
       justify-content: space-between;
-      margin-bottom: 8px;
-      padding: 0 16px;
+      margin-bottom: 4px;
+      padding: 0 12px;
       max-width: 600px;
       width: 100%;
-      background: rgba(227,234,252,0.4);
+      background: rgba(227,234,252,0.5);
       border-radius: 8px;
-      box-shadow: 0 2px 8px rgba(31,38,135,0.06);
+      box-shadow: 0 4px 16px rgba(31, 38, 135, 0.08), inset 0 1px 0 rgba(255, 255, 255, 0.4);
     }
     .cart-item-name {
       flex: 2;
@@ -191,84 +225,108 @@
       font-size: 1em;
       cursor: pointer;
       transition: background 0.2s;
+      touch-action: manipulation;
     }
     .cart-item-controls button:hover {
       background: #00aaff;
     }
     #cart-count, #cart-total {
-      margin: 2px 0;
+      margin: 1px 0;
       color: #005f73;
       font-weight: 700;
-      font-size: 1.08em;
+      font-size: 0.95em;
       text-align: center;
     }
     #cart-section button {
-      margin-top: 8px;
-      padding: 10px 28px;
+      margin-top: 4px;
+      padding: 10px 24px;  /* Bigger button for touch */
       border-radius: 8px;
       border: none;
       background: linear-gradient(90deg, #005f73 60%, #00aaff 100%);
       color: #fff;
       font-weight: bold;
-      font-size: 1.08em;
+      font-size: 1rem;
       cursor: pointer;
       box-shadow: 0 2px 8px rgba(0,0,0,0.10);
       transition: background 0.2s, transform 0.2s;
       letter-spacing: 0.5px;
-    }
-    #cart-section button:active {
-      background: linear-gradient(90deg, #0099cc 60%, #005f73 100%);
-      transform: scale(0.98);
+      touch-action: manipulation;
     }
     @media (max-width: 700px) {
       .lux-box {
-        font-size: 1.3rem;
-        padding: 10px 0 8px 0;
+        font-size: 1.5rem;
+        padding: 12px 0 10px 0;
         margin-top: 12px;
       }
       .container {
-        padding: 12px 2px;
+        padding: 16px 4px;
         max-width: 98vw;
-        gap: 14px;
+        gap: 10px;
       }
       .menu-card {
-        width: 98vw;
-        max-width: 340px;
+        padding: 10px;
+        min-height: 110px;
+        margin-left: -1mm;  /* Added for alignment */
       }
       .menu-card img {
-        height: 110px;
+        width: 90px;  /* Bigger on mobile */
+        height: 90px;
+      }
+      .menu-card h3 {
+        font-size: 1.2rem;
+      }
+      .menu-card p {
+        font-size: 1.1rem;
+      }
+      .menu-card button {
+        width: 55px;
+        height: 55px;
+        font-size: 2rem;
       }
       #cart-section {
         max-width: 98vw;
-        padding: 0.7rem;
+        padding: 0.5rem;
+        max-height: 200px;
       }
     }
     @media (max-width: 500px) {
       .lux-box {
-        font-size: 1.1rem;
-        padding: 7px 0 5px 0;
+        font-size: 1.3rem;
+        padding: 10px 0 8px 0;
         margin-top: 8px;
       }
       .container {
-        padding: 8px 0;
-        gap: 10px;
+        padding: 12px 2px;
+        gap: 8px;
       }
       .menu-card {
-        width: 98vw;
-        max-width: 98vw;
+        padding: 8px;
+        min-height: 120px;
+        margin-left: -1mm;  /* Added for alignment */
       }
       .menu-card img {
-        height: 80px;
+        width: 100px;  /* Even bigger on small mobile */
+        height: 100px;
       }
       .menu-card h3 {
-        font-size: 1rem;
+        font-size: 1.3rem;
       }
       .menu-card p {
-        font-size: 0.92rem;
-        padding: 0 7px 10px;
+        font-size: 1.2rem;
+      }
+      .menu-card button {
+        width: 60px;
+        height: 60px;
+        font-size: 2.2rem;
       }
       #cart-section {
-        padding: 0.5rem;
+        padding: 0.4rem;
+        max-height: 180px;
+      }
+      .portion-options {
+        flex-direction: column;
+        gap: 3px;
+        font-size: 0.9rem;
       }
     }
   </style>
@@ -327,19 +385,31 @@
       card.className = "menu-card";
       card.innerHTML = `
         <img src="${data.imageURL || 'https://via.placeholder.com/200x140'}" alt="${data.name}" />
-        <h3>${data.name || 'Unnamed Item'}</h3>
-        <p>RM ${parseFloat(data.price).toFixed(2)}</p>
-        <button onclick='addToCart(${JSON.stringify(data)})'>Add to Cart</button>
+        <div class="details">
+          <h3>${data.name || 'Unnamed Item'}</h3>
+          <p>RM ${parseFloat(data.price).toFixed(2)}</p>
+          <div class="portion-options">
+            <label><input type="radio" name="portion-${data.name.replace(/\s+/g, '-')}" value="normal" checked> Normal</label>
+            <label><input type="radio" name="portion-${data.name.replace(/\s+/g, '-')}" value="large"> Large</label>
+            <label><input type="radio" name="portion-${data.name.replace(/\s+/g, '-')}" value="small"> Small</label>
+          </div>
+        </div>
+        <button onclick='addToCart(${JSON.stringify(data)}, getPortion("${data.name.replace(/\s+/g, '-')}"))'>+</button>
       `;
       menuContainer.appendChild(card);
     }
 
-    function addToCart(item) {
-      const existing = cart.find(i => i.name === item.name);
+    function getPortion(nameKey) {
+      const selected = document.querySelector(`input[name="portion-${nameKey}"]:checked`);
+      return selected ? selected.value : 'normal';
+    }
+
+    function addToCart(item, portion) {
+      const existing = cart.find(i => i.name === item.name && i.portion === portion);
       if (existing) {
         existing.qty += 1;
       } else {
-        cart.push({ ...item, qty: 1 });
+        cart.push({ ...item, qty: 1, portion });
       }
       updateCartStatus();
     }
@@ -362,7 +432,7 @@
           div.className = "cart-item";
           total += item.price * item.qty;
           div.innerHTML = `
-            <span class="cart-item-name">${item.name}</span>
+            <span class="cart-item-name">${item.name} (${item.portion.charAt(0).toUpperCase() + item.portion.slice(1)})</span>
             <span class="cart-item-price">RM ${(item.price * item.qty).toFixed(2)}</span>
             <div class="cart-item-controls">
               <button onclick="changeQty(${index}, -1)">−</button>
@@ -384,12 +454,12 @@
       }
       const q = query(collection(db, "vendors", vendorId, "menus"), where("available", "==", true));
       const snapshot = await getDocs(q);
-      console.log("Menu docs count:", snapshot.size); // <-- Add this line
+      console.log("Menu docs count:", snapshot.size);
       if (snapshot.empty) {
         document.getElementById("menu-container").innerHTML = "<p>No menu items found for this shop.</p>";
       } else {
         snapshot.forEach(doc => {
-          console.log("Menu item:", doc.data()); // <-- Add this line
+          console.log("Menu item:", doc.data());
           renderMenuItem(doc.data());
         });
       }
@@ -405,6 +475,7 @@
     window.addToCart = addToCart;
     window.changeQty = changeQty;
     window.goToSummary = goToSummary;
+    window.getPortion = getPortion;
 
     setHeader();
     loadMenu();
