--- a/shop-list.html
+++ b/shop-list.html
@@ -194,7 +194,7 @@
       authDomain: "unm-caf-orders.firebaseapp.com",
       projectId: "unm-caf-orders",
       storageBucket: "unm-caf-orders.appspot.com",
-      messagingSenderId: "562096834985";
+      messagingSenderId: "562096834985",
       appId: "1:562096834985:web:f4bfe451e5482521e49cb8",
       measurementId: "G-J12PBDK7N1"
     };
